[tool.poetry]
name = "seg_text"
version = "0.1.0"
description = "pack_name descr "
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/seg-text"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
logzero = "^1.7.0"
icecream = "^2.1.1"
install = "^1.3.5"
tqdm = "^4.62.3"
sentence-splitter = "^1.4"
numpy = "^1.22.2"
Morfessor = "2.0.6"


[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test"
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint seg_text" }
format = "black tests seg_text"
tunnel = {cmd ="ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pep257 = "^0.7.0"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
